solving flow type issues

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/images/apple-touch-icon.png"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
